2011-05-19  Mihnea Ovidenie  <mihnea@adobe.com>

        Reviewed by Simon Fraser.

        Gradients not horizontal using 270deg with odd div width
        https://bugs.webkit.org/show_bug.cgi?id=60157
        
        When the angle of the linear gradient is 270, the endpoint should
        be computed in the same way as for 0, 90, 180 cases since tan(270)
        is undefined.

        * fast/gradients/css3-linear-right-angle-gradients-expected.txt: Added.
        * fast/gradients/css3-linear-right-angle-gradients.html: Added.
        * platform/mac/fast/gradients/css3-linear-right-angle-gradients-expected.png: Added.

2011-05-19  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.

        svg/dynamic-updates/SVGFEMorphologyElement-dom-radius-attr.html needs new reference image on Snow Leopard.

        * platform/chromium-mac/svg/dynamic-updates/SVGFEMorphologyElement-dom-radius-attr-expected.png: Added.

2011-05-19  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed.

        Update mac pixel test baseline, had marginal differences in the filter results and the text selection rectangles since a while.
        The baseline passes again on my 32bit and 64bit machine, using run-webkit-tests --tolerance 0.011 -p svg

        * platform/mac/svg/W3C-SVG-1.1/filters-color-01-b-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-comptran-01-b-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-morph-01-f-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-turb-01-f-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-turb-02-f-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/text-tselect-02-f-expected.png:
        * platform/mac/svg/batik/filters/feTile-expected.png:
        * platform/mac/svg/custom/feComponentTransfer-Discrete-expected.png:
        * platform/mac/svg/custom/feComponentTransfer-Gamma-expected.png: